--- a/index.html
+++ b/index.html
@@ -8,23 +8,57 @@
   <meta name="description" content="Hello">
   <meta name="author" content="SitePoint">
 	<link href='http://fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/one.css">
+    <link rel="stylesheet" href="css/one.css">
 </head>
 
 <body>
-  
+  <canvas id="mycanvas" width=100% height=100%></canvas>
   <div class="vcenter">
-  <h1>
-  <center>
-  	Hi, I'm Grace.
-  </br>
-  	<br>You can email me at <a href="mailto:grace@gracez.me" target="_top">grace@gracez.me</a>.
-  	</br>
-  	<br>My Github is <a href="http://github.com/gzgracez">gzgracez</a>.
-  </center>
-	</h1>
-</div>
+    <h1>
+      <center>
+        Hi, I'm Grace.
+      </br>
+        <br>You can email me at <a href="mailto:grace@gracez.me" target="_top">grace@gracez.me</a>.
+        </br>
+        <br>My Github is <a href="http://github.com/gzgracez">gzgracez</a>.
+      </center>
+	  </h1>
+  </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/0.2.0/trianglify.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+      ga('create', 'UA-61491966-2', 'auto');
+      ga('send', 'pageview');
+    </script>
+
+    <script>
+      var pattern = Trianglify({
+        height: window.innerHeight,
+        width: window.innerWidth,
+        x_colors: 'random',
+        palette: Trianglify.colorbrewer,
+        cell_size: 80
+      });
+      var canvas = pattern.canvas(document.getElementById('mycanvas'));
+
+      function resizeCanvas() {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+        var pattern = Trianglify({
+          height: window.innerHeight,
+          width: window.innerWidth,
+          x_colors: 'random',
+          palette: Trianglify.colorbrewer,
+          cell_size: 80
+        });
+        canvas = pattern.canvas(document.getElementById('mycanvas'));
+      }
+      window.addEventListener('resize', resizeCanvas, false);
+    </script>
 </body>
 </html>
