--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <canvas id="mycanvas" width=100% height=100%></canvas>
+  <canvas id="mycanvas" width="100%" height="50px"></canvas>
   <div class="vcenter">
     <h1>
       <center>
@@ -38,9 +38,9 @@
 
     <script>
       var pattern = Trianglify({
-        height: window.innerHeight,
+        height: 50,
         width: window.innerWidth,
-        x_colors: 'random',
+        x_colors: 'GnBu',
         palette: Trianglify.colorbrewer,
         cell_size: 80
       });
@@ -48,11 +48,11 @@
 
       function resizeCanvas() {
         canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
+        canvas.height = 50;
         var pattern = Trianglify({
-          height: window.innerHeight,
+          height: 50,
           width: window.innerWidth,
-          x_colors: 'random',
+          x_colors: 'GnBu',
           palette: Trianglify.colorbrewer,
           cell_size: 80
         });
