--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Grace</title>
   <meta name="description" content="Hello">
   <meta name="author" content="SitePoint">
-  <!-- <link href='http://fonts.googleapis.com/css?family=Ubuntu:300' rel='stylesheet' type='text/css'> -->
+  <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/one.css">
@@ -38,7 +38,7 @@
   <div class="vcenter">
     <h1>
       <center>
-        Hi, I'm Grace.
+        Hi, I'm Grace!
       </br>
       <br>You can email me at <a href="mailto:grace@gracez.me" target="_top">grace@gracez.me</a>.
     </br>
