--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Grace</title>
-  <meta name="description" content="Hello">
-  <meta name="author" content="SitePoint">
+  <title>Grace Z</title>
+  <meta name=viewport content="width=device-width, initial-scale=1">
+  <meta name="description" content="">
+  <meta name="author" content="">
   <link href='http://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -51,28 +52,16 @@
 <script src="js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/trianglify/0.2.0/trianglify.min.js"></script>
 <script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-ga('create', 'UA-61491966-2', 'auto');
-ga('send', 'pageview');
+  ga('create', 'UA-61491966-2', 'auto');
+  ga('send', 'pageview');
 </script>
 
 <script>
-var pattern = Trianglify({
-  height: 50,
-  width: window.innerWidth,
-  x_colors: 'GnBu',
-  palette: Trianglify.colorbrewer,
-  cell_size: 80
-});
-var canvas = pattern.canvas(document.getElementById('mycanvas'));
-
-function resizeCanvas() {
-  canvas.width = window.innerWidth;
-  canvas.height = 50;
   var pattern = Trianglify({
     height: 50,
     width: window.innerWidth,
@@ -80,9 +69,21 @@ function resizeCanvas() {
     palette: Trianglify.colorbrewer,
     cell_size: 80
   });
-  canvas = pattern.canvas(document.getElementById('mycanvas'));
-}
-window.addEventListener('resize', resizeCanvas, false);
+  var canvas = pattern.canvas(document.getElementById('mycanvas'));
+
+  function resizeCanvas() {
+    canvas.width = window.innerWidth;
+    canvas.height = 50;
+    var pattern = Trianglify({
+      height: 50,
+      width: window.innerWidth,
+      x_colors: 'GnBu',
+      palette: Trianglify.colorbrewer,
+      cell_size: 80
+    });
+    canvas = pattern.canvas(document.getElementById('mycanvas'));
+  }
+  window.addEventListener('resize', resizeCanvas, false);
 </script>
 </body>
 </html>
