particles full screen

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
   </nav>
   <canvas id="mycanvas" width="100%" height="50px"></canvas>
-  <div id="particles-js"></div>
+  <div id="particles-js" style="width: 100%; height: 100%;"></div>
   <div class="vcenter">
     <h1>
       <center>
@@ -59,7 +59,7 @@
   particlesJS("particles-js", {
   "particles": {
     "number": {
-      "value": 218,
+      "value": 300,
       "density": {
         "enable": true,
         "value_area": 800
