--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       </div><!--/.nav-collapse -->
     </div>
   </nav>
+  <div id="particles-js"></div>
   <canvas id="mycanvas" width="100%" height="50px"></canvas>
-  <div id="particles-js" style="width: 100%; height: 100%;"></div>
   <div class="vcenter">
     <h1>
       <center>
